{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 8,
  "lineage": "5db2478a-da7c-c172-1514-bf1e176e33a4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "staging_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.155.133.83",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-07T00:39:54.613-08:00",
            "id": "projects/projet-long-489508/regions/europe-west9/addresses/staging-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "staging-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "projet-long-489508",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/regions/europe-west9/addresses/staging-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T00:40:07.119-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projet-long-489508/global/firewalls/staging-allow-app",
            "log_config": [],
            "name": "staging-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/networks/staging-vpc",
            "priority": 1000,
            "project": "projet-long-489508",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/firewalls/staging-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "staging-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T00:40:07.116-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projet-long-489508/global/firewalls/staging-allow-ssh",
            "log_config": [],
            "name": "staging-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/networks/staging-vpc",
            "priority": 1000,
            "project": "projet-long-489508",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/firewalls/staging-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "staging-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/zones/europe-west9-a/disks/staging-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/projet-long-489508/zones/europe-west9-a/instances/staging-vm",
            "instance_id": "4004566899282565779",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "jenkins:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQD4Pr/R/nr7lshSkUZZ6gxmt4X9RmXAsghR2qeMwbi00ppdpmvdZThbn7FvCc/T7AihAMyvMeljbDmXD4XzQiTnxQ+fAhNBn2f2I0dTEeJ+agf+onFM8GaeRYm9p7BV3hOuBydwCiuJy5Cta2OeWS0HbrMLD2pkSJKpAVvCF6WlUttS+Fd2SKj1ibR+pZo9HJ4QyvY70eEjMRlT+3rdnJTc3+tXQ42TNPgmprYdcI+iOkpyICU/9qjaGBdbDDErhwD9XkoEbMFEfdjOuvhTUVF4v11x06gwQ5dt3XjbmEkArbAU0Q/+/uhxOMqvHSPzMNdmljdSZytQgII+qKe3153XUtFT5NzOOPtpylK5n4sE/AVw1PxXlnNQgtFwlx2ur0P58hDOrFfVnXO3ObxyfVMFA0jkSqD8V0BgdxtADvg4o [...]
            },
            "metadata_fingerprint": "rfCUzaR09Ys=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euxo pipefail\n\n# Basic packages\napt-get update\napt-get install -y ca-certificates curl gnupg lsb-release\n\n# Install Docker (using Docker's repo)\ninstall -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nchmod a+r /etc/apt/keyrings/docker.gpg\n\necho \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https [...]
            "name": "staging-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.133.83",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/networks/staging-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/regions/europe-west9/subnetworks/staging-subnet",
                "subnetwork_project": "projet-long-489508"
              }
            ],
            "project": "projet-long-489508",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/zones/europe-west9-a/instances/staging-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "staging-vm"
            ],
            "tags_fingerprint": "1GzlMWiJSP8=",
            "zone": "europe-west9-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_address.staging_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/projet-long-489508/global/networks/staging-vpc",
            "mtu": 0,
            "name": "staging-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6926006312606522036",
            "project": "projet-long-489508",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/networks/staging-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T00:40:07.424-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/projet-long-489508/regions/europe-west9/subnetworks/staging-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "staging-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/global/networks/staging-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "projet-long-489508",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projet-long-489508/regions/europe-west9/subnetworks/staging-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.compute"
          ]
        }
      ]
    }
  ]
}